--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 The original examples in the Cookbook are in C++, here they are translated to use JavaCV API.</p>
 
 <p>For description please refer to page
-<a href="http://code.google.com/p/javacv/wiki/OpenCV2_Cookbook_Examples">OpenCV2_Cookbook_Examples</a> in the JavaCV Wiki:
-<a href="http://code.google.com/p/javacv/wiki/OpenCV2_Cookbook_Examples">http://code.google.com/p/javacv/wiki/OpenCV2_Cookbook_Examples</a></p>
+<a href="https://github.com/bytedeco/javacv-examples">OpenCV2_Cookbook_Examples</a>.</p>
       </section>
     </div>
 
